environment/cpu-stress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpu-stress
spec:
  replicas: 5
  selector:
    matchLabels:
      app: cpu-stress
  template:
    metadata:
      labels:
        app: cpu-stress
    spec:
      containers:
      - name: stress
        image: vish/stress
        args:
          - "--cpu"
          - "2"
        resources:
          requests:
            cpu: "1000m"
